Fix infocard image alignment

--- a/_infocard.scss
+++ b/_infocard.scss
@@ -14,7 +14,7 @@
 }
 .infocard-img {
 	display: inline-block;
-	vertical-align: middle;
+	vertical-align: top;
 	margin-right: 6px;
 }
 .infocard-data {
